docs/tests/nameres/custom_types/valid/GenStruct.src
// Valid

struct GenGroup <T, B> {
    let T one;
    let B two;

    fn void ADD(T one, B two);
}
fn void ADD(int a, int b);