docs/tests/nameres/custom_types/invalid/StructAsignmentOverload.src
// Valid

struct str {
    operator = (str a, str b) {
        a + b; 
    }
}